@@ -1,15 +1,24 @@
-jQuery.validator.addMethod("maxWords", function(value, element, params) { 
-    return this.optional(element) || value.match(/\b\w+\b/g).length < params; 
-}, jQuery.validator.format("Please enter {0} words or less.")); 
- 
-jQuery.validator.addMethod("minWords", function(value, element, params) { 
-    return this.optional(element) || value.match(/\b\w+\b/g).length >= params; 
-}, jQuery.validator.format("Please enter at least {0} words.")); 
- 
-jQuery.validator.addMethod("rangeWords", function(value, element, params) { 
-    return this.optional(element) || value.match(/\b\w+\b/g).length >= params[0] && value.match(/bw+b/g).length < params[1]; 
-}, jQuery.validator.format("Please enter between {0} and {1} words."));
+(function() {
+	
+	function stripHtml(value) {
+		// remove html tags and space chars
+		return value.replace(/<.[^<>]*?>/g, ' ').replace(/&nbsp;|&#160;/gi, ' ')
+		// remove numbers and punctuation
+		.replace(/[0-9.(),;:!?%#$'"_+=\/-]*/g,'');
+	}
+	jQuery.validator.addMethod("maxWords", function(value, element, params) { 
+	    return this.optional(element) || stripHtml(value).match(/\b\w+\b/g).length < params; 
+	}, jQuery.validator.format("Please enter {0} words or less.")); 
+	 
+	jQuery.validator.addMethod("minWords", function(value, element, params) { 
+	    return this.optional(element) || stripHtml(value).match(/\b\w+\b/g).length >= params; 
+	}, jQuery.validator.format("Please enter at least {0} words.")); 
+	 
+	jQuery.validator.addMethod("rangeWords", function(value, element, params) { 
+	    return this.optional(element) || stripHtml(value).match(/\b\w+\b/g).length >= params[0] && value.match(/bw+b/g).length < params[1]; 
+	}, jQuery.validator.format("Please enter between {0} and {1} words."));
 
+})();
 
 jQuery.validator.addMethod("letterswithbasicpunc", function(value, element) {
 	return this.optional(element) || /^[a-z-.,()'\"\s]+$/i.test(value);
